# fire-forecast

./: .gitignore  CHANGELOG.md  README.md  config.py  create_fire_forecast_maps.py  main.py  pyproject.toml
utils/: file_mgmt_utils.py  plotting.py  plotting_utils.py  processing.py  web_scraping.py  web_scraping_utils.py
